need to clean up and try to use Ecto.Multi rather than nested case statements, but it is working!

--- a/lib/circular_ref_phx_web/templates/individual/edit.html.eex
+++ b/lib/circular_ref_phx_web/templates/individual/edit.html.eex
@@ -32,8 +32,17 @@
       <%= error_tag master_alias, :date_of_bith %>
     </div>
 
-    <div class="form-group" />
-      <%= submit "SAVE", class: "btn btn-primary" %>
-    </div>
+
   <% end %>
+
+  <div class="form-group" />
+    <%= label f, :status, class: "control-label" %>
+    <%= text_input f, :status, class: "form-control" %>
+    <%= error_tag f, :status %>
+  </div>
+
+  <div class="form-group" />
+    <%= submit "SAVE", class: "btn btn-primary" %>
+  </div>
+
 <% end %>
